[project]
name = "ml_dtypes"
dynamic = ["version"]  # Load from ml_dtypes.__version__.
description = "ml_dtypes is a stand-alone implementation of several NumPy dtype extensions used in machine learning."
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
license-files = ["LICENSE", "LICENSE.eigen"]
authors = [{name = "ml_dtypes authors", email="ml_dtypes@google.com"}]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Intended Audience :: Science/Research",
]
keywords = []

# pip dependencies of the project
dependencies = [
    # Ensure numpy release supports Python version.
    "numpy>=1.24.0",
    "numpy>=1.26.0; python_version>='3.12'",
    "numpy>=2.1.0; python_version>='3.13'",
    "numpy>=2.3.0; python_version>='3.14'",
]

[project.urls]
homepage = "https://github.com/jax-ml/ml_dtypes"
repository = "https://github.com/jax-ml/ml_dtypes"
# Other: `documentation`, `changelog`

[project.optional-dependencies]
# Development deps (unittest, linting, formating,...)
# Installed through `pip install .[dev]`
dev = [
    "absl-py",
    "pytest",
    "pytest-xdist",
    "pylint>=2.6.0",
    "pyink",
]

[tool.pyink]
# Formatting configuration to follow Google style-guide
line-length = 80
preview = true
pyink-indentation = 2
pyink-use-majority-quotes = true

[build-system]
requires = [
    "scikit-build-core",
    "cmake>=3.15",
    # We build against the most recent supported NumPy 2.0 release;
    # see https://github.com/numpy/numpy/issues/27265
    "numpy~=2.0",
]
build-backend = "scikit_build_core.build"

[tool.scikit-build]
wheel.packages = ["ml_dtypes"]
sdist.exclude = ["third_party/eigen/.git*"]

[tool.scikit-build.metadata.version]
provider = "scikit_build_core.metadata.regex"
input = "ml_dtypes/__init__.py"
